<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.claikoia.nano.nanodegreeportfolio.MainActivity"
    android:background="#9FA8DA">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/spotify"
        android:id="@+id/spotify"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#3F51B5"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/scores"
        android:id="@+id/scores"
        android:layout_below="@+id/spotify"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="31dp"
        android:background="#3F51B5"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/library"
        android:id="@+id/library"
        android:layout_below="@+id/scores"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:background="#3F51B5"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/build"
        android:id="@+id/build"
        android:layout_above="@+id/scores"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#3F51B5"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/xyz"
        android:id="@+id/xyz"
        android:layout_above="@+id/library"
        android:layout_alignRight="@+id/build"
        android:layout_alignEnd="@+id/build"
        android:background="#3F51B5"
        android:onClick="onClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_alignBottom="@+id/library"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#3F51B5"
        android:onClick="onClick"/>
</RelativeLayout>
